@@ -1,6 +1,7 @@
 Revision history for Set::Similarity
 
 {{$NEXT}}
+       - pad if length word < n-gram width
 
 0.018  2014-08-19 23:45:03 CEST
        - remove useless code, force 1-gram if width not integer
